added cursor-pointer effect on contact links in footer page

--- a/src/App.css
+++ b/src/App.css
@@ -94,9 +94,14 @@ margin-bottom: 40%;
 
 .contactLinks {
 /* border: solid 4px red; */
+cursor: pointer;
 color: white;
 text-decoration:overline;
 text-decoration-style: double;
+}
+
+:hover {
+  
 }
 
 
