--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body {
 
 .homePage{
   /* border: solid 3px orange; */
-  height: 70vh;
+  height: 150vh;
   width: 100vw; 
   background-color:burlywood;
 }
@@ -73,13 +73,11 @@ margin-bottom: 40%;
 .footer {
   border: solid 3px rgb(201, 225, 43);
   background-image: url('https://www.citypng.com/public/uploads/preview/stars-galaxy-planet-illustration-transparent-png-31629667891pwgssraa4l.png');
-  /* height: 10vh ; */
+  height: 10vh ;
   width: 100vw;
-  /* margin-top: 30%; */
-   padding: 3%;
+  padding: 3%;
    display: flex; 
   justify-content:space-around;
-  align-content: center;
   color: white;
   font-weight: bold;
   font-size: 25px;
@@ -90,6 +88,7 @@ margin-bottom: 40%;
   height: 8vh;
   width: 8%;
   font-size: 20px;
+  margin-top: -20px;
 }
 
 .contactLinks {
@@ -101,7 +100,7 @@ text-decoration-style: double;
 }
 
 :hover {
-  
+
 }
 
 
