updated readme, wrote an about me, created a random quote generator using an API

--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,13 @@ body {
   top: 0;
 }
 
-.homePage{
+.homPage{
   /* border: solid 3px orange; */
   height: 150vh;
   width: 100vw; 
   background-color:burlywood;
-  font-family: 'vt323';
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  overflow-y: hidden;
 }
 
 .appImages {
@@ -193,8 +194,6 @@ body {
 
 .footer {
   /* border: solid 3px rgb(201, 225, 43); */
-  /* background-image: url('https://www.citypng.com/public/uploads/preview/stars-galaxy-planet-illustration-transparent-png-31629667891pwgssraa4l.png'); */
-
   background-image: url(./Assets/Stars\ Galaxy\ Planet\ PNG\ -\ 998x1000.png);
   height: 10vh ;
   width: 100vw;
@@ -204,8 +203,9 @@ body {
   color: white;
   font-weight: bold;
   font-size: 25px;
-  background-repeat: no-repeat; 
-  background-size: contain;
+  background-repeat: repeat; 
+  background-size: cover;
+  background-color: rgb(73, 50, 95);
   position: sticky;
   bottom: 0;
  
