--- a/src/App.css
+++ b/src/App.css
@@ -55,12 +55,46 @@ body {
   height: fit-content;
   width: 65%;
   font-size: 25px;
-  padding: 70px;
+  font-weight: 2px;
+  padding: 50px;
   margin: 5%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 2;
   color: rgb(52, 5, 5);
 }
+
+.findQuote{
+  /* border: solid orangered 3px; */
+  border-radius: 20%;
+  height: 20vh;
+  width: 50vw;
+  margin: 45px;
+  font-size: 25px;
+  font-weight: bold;
+  color: rgb(154, 24, 154);
+}
+
+.quotesButton{
+  border: solid white 8px;
+  border-radius: 50%;
+  padding: 1px;
+  height: 20vmin;
+  width: 20vmin;
+  border-left-color:rgb(87, 205, 87);
+  border-right-color:rgb(87, 87, 237);
+  animation: spin 3s infinite linear
+}
+
+@keyframes spin {
+   0%{
+    transform: rotate(0deg);
+  }
+   100% {
+    transform: rotate(360deg);
+
+  }
+}
+
 
 .appImages {
   /* border: solid 3px rgb(213, 64, 126); */
