Took off logic for author name so just quote for the day displays when button is clicked

--- a/src/App.css
+++ b/src/App.css
@@ -256,7 +256,7 @@ body {
 
 .footer {
   /* border: solid 3px rgb(201, 225, 43); */
-  background-image: url(./Assets/Stars\ Galaxy\ Planet\ PNG\ -\ 998x1000.png);
+  /* background-image: url(./Assets/Stars\ Galaxy\ Planet\ PNG\ -\ 998x1000.png); */
   height: 10vh ;
   width: 100vw;
   padding: 3%;
