--- a/src/App.css
+++ b/src/App.css
@@ -119,17 +119,29 @@ body {
 .projectIntro {
   /* border: solid 2px black; */
   border-radius: 20%;
-  height: 20vh;
-  /* width:55vw; */
+  height: fit-content;
+  width:55vw;
   background-color: cadetblue;
   display: flex;
   flex-direction:row;
   padding: 20px;
-  font-size: 20px;
+  font-size: 25px;
   font-family: serif;
   color: rgb(246, 241, 242);
-  margin-top: 1%;
-  margin-right: 40%;
+  margin-top: 2%;
+  margin-left: 5%;
+}
+
+.moreLinks{
+  /* border: solid 2px black; */
+  border-radius: 10%;
+  height: 10vh;
+  width: 50vw;
+  margin-top: 3%;
+  margin-left:20%;
+  background-color: cadetblue;
+  padding: 20px;
+  font-size: 20px;
 }
 
  .carousel-inner{
